add rabbitmq
